- changed implementation of maximal strong branching iterations calculation in reliability branching
- modified the automatic objfactor setting of feaspump heuristic to let the objective function have stronger influence
- changed implementation of automatic minplungedepth and maxplungedepth calculation in bfs node selector
- new pluging: implied bound cuts separator

parameters:
- new parameters lp/cleanupcolsroot and lp/cleanuprowsroot to distinguish cleanup settings between root node and other
  nodes
- new parameters heuristics/fixandinfer/proprounds and heuristics/fixandinfer/minfixings
- default frequency offset of fracdiving heuristic changed to 3
- default frequency offset of (new) feaspump heuristic changed to 0
- default frequency offset of objfeaspump heuristic changed to 8
- changed default priority of primal heuristics
- renamed parameter limits/sol to limits/solutions
- changed default check priority of knapsack constraint handler to -600000
- new parameters separating/.../delay
- new parameters presolving/.../delay
- new parameters propagating/.../delay
- new parameters constraints/.../delaysepa
- new parameters constraints/.../delayprop
- new parameters constraints/.../delaypresol
- changed default priority of Gomory cut separator to -1000 (will now be called after constraint handlers!)
- changed default priority of strong CG cut separator to -2000
- changed default priority of cmir cut separator to -3000
- new parameters lp/initalgorithm and lp/resolvealgorithm for switching between simplex and barrier algorithm
- new parameter numerics/barrierconvtol to set the convergence tolerance in the barrier algorithm
- new parameter lp/pricing to set the pricing strategy used in the LP solver
- changed default of parameter lp/pricing to 's'teepest edge pricing
- new parameter lp/checkstability to disable stability check of LP solver's result code
- default parameter branching/relpscost/minreliable changed to 1.0